--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "not ie <= 8"
   ],
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "framework7": "^3.1.1",
     "html-entities": "^1.2.1"
   }
