--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --config webpack.dev.js",
+    "dll": "webpack --config webpack.dll.config.js -p",
     "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
@@ -26,6 +27,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
@@ -43,6 +45,7 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "cssnano": "^4.0.5",
     "framework7": "^3.1.1",
     "html-entities": "^1.2.1"
   }
