--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-safe-parser": "^4.0.1",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
     "style-loader": "^0.22.1",
@@ -44,9 +45,12 @@
     "not ie <= 8"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "cssnano": "^4.0.5",
+    "expose-loader": "^0.7.5",
     "framework7": "^3.1.1",
-    "html-entities": "^1.2.1"
+    "html-entities": "^1.2.1",
+    "jquery": "^2.1.4"
   }
 }
